--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,14 +2,14 @@ group 'com.rightbite.denisr'
 version '0.1.0'
 
 buildscript {
-    ext.kotlin_version = '1.7.20'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:8.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -28,6 +28,16 @@ apply plugin: 'kotlin-android'
 android {
     compileSdk 34
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+
+    namespace 'com.rightbite.denisr'
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -42,7 +52,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "com.github.klaviyo.klaviyo-android-sdk:analytics:2.2.1"
-    implementation "com.github.klaviyo.klaviyo-android-sdk:push-fcm:2.2.1"
+    implementation "com.github.klaviyo.klaviyo-android-sdk:analytics:3.0.0"
+    implementation "com.github.klaviyo.klaviyo-android-sdk:push-fcm:3.0.0"
     implementation 'com.google.firebase:firebase-messaging-ktx:23.4.1'
 }
